--- a/.env.example
+++ b/.env.example
@@ -43,8 +43,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=4b6d18dc5ed03b
-MAIL_PASSWORD=d1813bcfcd1ca3
+MAIL_USERNAME=
+MAIL_PASSWORD=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
